# project-freta

./: Cargo.toml  MANIFEST.in  README.md  build.rs  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.py
.cargo/: config.toml
.github/workflows/: build.yml  python-package.yml
docs/: Makefile  cli.rst  conf.py  index.rst
eng/: build.sh
examples/: analyze-az-vm.rs  analyze-failed.py  analyze-good.py  analyze-hyperv-vm.rs  analyze-outdated.py  hyperv-snapshots.py  image-az-compute-vms.py  search-reports.py  wait-for-images.py  webhook-receiver.rs
extra/: licenses.json  report-schema.json  swagger.json  webhook-event-schema.json
freta/: __main__.py  __version__.py  api.py  backend.py  cli.py  types.py
src/: lib.rs
src/client/: argparse.rs  config.rs  error.rs  io.rs  mod.rs
src/client/backend/: auth.rs  azure_blobs.rs  mod.rs
src/models/: base.rs  mod.rs  service.rs
src/models/analysis/: hook.rs  memory.rs  mod.rs  symbols.rs
src/models/webhooks/: mod.rs  service.rs
src/models/webhooks/snapshots/: freta__models__webhooks__tests__hmac-2.snap  freta__models__webhooks__tests__hmac.snap  freta__models__webhooks__tests__uuid_v7_format.snap
tests/: freta_test_utils.py  test_api.py
tests/fixtures/: test_api_artfacts_without_scan  test_api_create_update_analyze_delete  test_api_formats  test_api_get_image_artifacts  test_api_regions  test_api_search_filters  test_api_upload  test_api_versions
