[package]
name = "freta"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "Project Freta client"
authors = ["project-freta@microsoft.com"]
keywords = ["memory-forensics", "security"]
homepage = "https://github.com/microsoft/project-freta"
repository = "https://github.com/microsoft/project-freta"

[features]
default = ["client"]
client = [
    "dep:async-stream",
    "dep:azure_core", 
    "dep:azure_identity", 
    "dep:azure_storage", 
    "dep:azure_storage_blobs", 
    "dep:env_logger",
    "dep:home", 
    "dep:thiserror",
    "dep:indicatif", 
    "dep:reqwest", 
    "dep:serde_urlencoded",
    "dep:tokio", 
]

[dependencies]
bytes = "1.2"
clap = {version="4.0", features=["derive"]}
futures = "0.3"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
time = "0.3"
url = {version="2.2"}

async-stream = {version="0.3", optional=true}
azure_core = {version="0.5", optional=true}
azure_identity = {version="0.6", optional=true}
azure_storage = {version="0.6", optional=true}
azure_storage_blobs = {version="0.6", optional=true}
env_logger = {version="0.9", optional=true}
home = {version="0.5", optional=true}
indicatif = {version="0.17", optional=true}
reqwest = {version="0.11", features=["json"], optional=true}
serde_urlencoded = {version="0.7", optional=true}
thiserror = {version="1.0", optional=true}
tokio = {version="1.0", features=["full"], optional=true}
uuid = {version="1.2", features=["serde"]}


[dev-dependencies]
azure_mgmt_compute = {version="0.6"}

[[bin]]
name = "freta"
required-features = ["client"]

[[example]]
name = "analyze-az-vm"
path = "examples/analyze-az-vm.rs"
required-features = ["client"]

[package.metadata.docs.rs]
all-features=true
