[package]
name = "freta"
version = "0.13.0"
edition = "2021"
license = "MIT"
description = "Project Freta client"
authors = ["project-freta@microsoft.com"]
keywords = ["memory-forensics", "security"]
homepage = "https://github.com/microsoft/project-freta"
repository = "https://github.com/microsoft/project-freta"
documentation = "https://docs.rs/freta"

[features]
default = ["client"]
client = [
    "dep:async-stream",
    "dep:azure_core", 
    "dep:azure_identity", 
    "dep:azure_storage_blobs", 
    "dep:cli-table",
    "dep:csv",
    "dep:env_logger",
    "dep:home", 
    "dep:thiserror",
    "dep:indicatif", 
    "dep:reqwest", 
    "dep:serde_urlencoded",
    "dep:tokio", 
    "dep:hmac",
    "dep:sha2",
]
schema = [
    "dep:assert-json-diff"
]

[dependencies]
bytes = "1.3"
clap = {version="4.1", features=["derive", "env"]}
futures = "0.3"
log = "0.4"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
time = "0.3"
url = "2.3"
schemars = {version="0.8", features=["uuid1"]}
getrandom = "0.2"

assert-json-diff = {version="2.0", optional=true}
async-stream = {version="0.3", optional=true}
azure_core = {version="0.8", optional=true}
azure_identity = {version="0.9", optional=true}
azure_storage_blobs = {version="0.9", optional=true}
cli-table = {version="0.4", optional=true}
csv = {version="1.1", optional=true}
env_logger = {version="0.10", optional=true}
home = {version="0.5", optional=true}
indicatif = {version="0.17", optional=true}
reqwest = {version="0.11", features=["json"], optional=true}
serde_urlencoded = {version="0.7", optional=true}
thiserror = {version="1.0", optional=true}
tokio = {version="1.25", features=["full"], optional=true}
uuid = {version="1.2", features=["serde"]}
hmac = {version="0.12", optional=true}
sha2 = {version="0.10", optional=true}

[dev-dependencies]
azure_mgmt_compute = "0.9"
powershell_script = "1.0"
insta = {version="1.26", features=["json"]}
axum = {version="0.6", features=["headers"]}

[[bin]]
name = "freta"
required-features = ["client"]

[[bin]]
name = "freta-schemas"
required-features = ["schema", "client"]

[[example]]
name = "analyze-az-vm"
path = "examples/analyze-az-vm.rs"
required-features = ["client"]

[[example]]
name = "analyze-hyperv-vm"
path = "examples/analyze-hyperv-vm.rs"
required-features = ["client"]

[[example]]
name = "webhook-receiver"
path = "examples/webhook-receiver.rs"
required-features = ["client"]

[package.metadata.docs.rs]
all-features=true
